[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/item_spawner.gd" type="Script" id=1]
[ext_resource path="res://animations/item_spawner_cestino.tres" type="SpriteFrames" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 11.8277

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.8283, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 5.09052

[node name="spawner" type="StaticBody2D" groups=[
"spawners",
]]
script = ExtResource( 1 )

[node name="s" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
frames = ExtResource( 2 )
animation = "broken"

[node name="p" type="Position2D" parent="."]
position = Vector2( 19.0919, 43.8995 )

[node name="base_area" type="Area2D" parent="."]

[node name="c" type="CollisionShape2D" parent="base_area"]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="jab_area" type="Area2D" parent="."]
position = Vector2( 0, 2 )

[node name="c" type="CollisionShape2D" parent="jab_area"]
light_mask = 2
position = Vector2( 0, -12 )
shape = SubResource( 2 )

[node name="efx" type="AudioStreamPlayer2D" parent="."]

[node name="non_calpestabile" type="CollisionShape2D" parent="."]
position = Vector2( -0.0628357, 17.619 )
shape = SubResource( 3 )
[connection signal="body_entered" from="base_area" to="." method="_on_base_area_body_entered"]
[connection signal="area_entered" from="jab_area" to="." method="_on_jab_area_area_entered"]
[connection signal="area_exited" from="jab_area" to="." method="_on_jab_area_area_exited"]
[connection signal="body_entered" from="jab_area" to="." method="_on_jab_area_body_entered"]
